environments/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: sri-app-service
 namespace: sri-staging # change per environment
spec:
 selector:
   app: sri-app
 ports:
 - port: 80
 targetPort: 80
 type: ClusterIP
